<resources>
    <string name="app_name">Black Diamond <b>VPN</b></string>
    <string name="connection_close_confirm">Would you like to cancel the current VPN Connection?</string>
    <string name="help">Faq</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>

    <string name="format_ip_address">%1$s:%2$d</string>
    <string name="format_ping">Ping: %s ms</string>
    <string name="format_speed">%s</string>

    <string name="drawer_premium_text">PREMIUM</string>
    <string name="drawer_share_text">TELL YOUR FRIEND</string>
    <string name="drawer_rate_text">RATE US</string>
    <string name="drawer_about_text">ABOUT</string>
    <string name="drawer_policy_text">PRIVACY POLICY</string>
    <string name="drawer_faq_text">FAQs</string>


    <string name="app_version_text" translatable="false">Version 1.0.0</string>
    <string name="about_app_text" translatable="false">You are using Black Diamond VPN build v1.0.0, Enjoy unlimited bandwidth with stable connection and a lot of servers to choose from. No limits, No restrictions</string>

    <string name="privacy_policy_title" translatable="false">Privacy Policy</string>
    <string name="unlimited_text">Unlimited</string>
    <string name="secure_text">Secure</string>
    <string name="support_text">Support</string>
    <string name="no_ads_text">No Ads</string>
    <string name="change_text">Change</string>
    <string name="disconnect_text">Disconnect</string>
    <string name="download_text">DOWNLOAD</string>
    <string name="dummy_ip_text">222.432.00.32</string>
    <string name="dummy_time_text">00:03:32</string>
    <string name="dummy_your_ip_text">Your IP : </string>
    <string name="go_premium_text">Go to Premium</string>
    <string name="not_connected_text">Not Connected</string>
    <string name="start_text">START</string>
    <string name="upload_text">UPLOAD</string>
    <string name="subscription_text">SUBSCRIPTION</string>
    <string name="status_text">Status : </string>
    <string name="select_server_text">Select Server</string>
    <string name="rate_app_text">RATE THIS APP</string>
    <string name="feedback_text">Feedback</string>
    <string name="content_text">Content</string>
    <string name="zero_text">0.0</string>
    <string name="speed_text">Speed</string>
    <string name="tcp_text">TCP</string>
    <string name="ping_text">Ping</string>
    <string name="submit_text">Submit</string>
    <string name="you_are_connected_text">You are Connected</string>
    <string name="connection_status_text">Connection Status</string>
    <string name="zero_duration_text">Duration: 00:00:00</string>
    <string name="packet_received_text">Packet Received:</string>
    <string name="no_thanks_text">No Thanks</string>
    <string name="restore_purchase_text">Restore Purchase</string>
    <string name="byte_in_text">Bytes In: </string>
    <string name="byte_out_text">Bytes OUT: </string>
    <string name="country_name_text">Country Name</string>
    <string name="choose_location_text">choose your location</string>
    <string name="default_server_text">Server Default Icon</string>
    <string name="feedback_hint_text">Suggest us what went wrong and we\'ll work on it.</string>

    <string name="country_name">No Server Selected</string>
    <string name="IP_address">Server IP Address</string>

    <string name="one_month_text">1 Month</string>
    <string name="three_months_text">3 Months</string>
    <string name="one_year_text">1 Year</string>

    <!--rating dialog-->
    <string name="feedback_email_subject" translatable="false">Black Diamond VPN</string>

    <string name="rating_promote">We are working hard for a better user experience. \nWe\'d greatly appreciate if you can rate us.</string>
    <string name="rating_title_1">Oh, no!</string>
    <string name="rating_title_2">We like you too!</string>
    <string name="rating_text_1">Please leave us some feedback.</string>
    <string name="rating_text_4">Thanks for your feedback.</string>
    <string name="rating_text_5">The best we can get :)</string>


    <string name="disconnect_first">In order to change the server, please disconnect the VPN first</string>
    <string name="share_app_text" translatable="false">Check this awesome free VPN. You can unblock any website and enjoy tons of free server, Download now Black Diamond VPN</string>
    <string name="share_msg" translatable="false">Check this awesome free VPN. You can unblock any website and enjoy tons of free server, Download now Black Diamond VPN</string>

    <string name="info_dialog_title">Credits</string>
    <string name="info_dialog_details">All of these servers are being provided by the VPN gate project and they are offering their service free of charge. You can read more about the VPN gate project at <a href="https://www.vpngate.net/en/">https://www.vpngate.net/en/</a></string>


    <!--Fields needed to be replaced by user-->
    <!--admob ids-->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--facebook ids-->
    <string name="facebook_interstitial_id">Your Facebook Interstitial Ad Id</string>
    <string name="facebook_native_banner_id">Your Facebook Native Banner Ad Id</string>

    <string name="developers_email" translatable="false">your_developer_email</string>
    <string name="privacy_policy_link" translatable="false">https://www.google.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Fields needed to be replaced by user-->

</resources>
