<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8090909">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/nav_header"
            layout="@layout/nav_header_main"
            android:layout_width="0dp"
            android:layout_height="160dp"
            app:layout_constraintBottom_toTopOf="@id/menu_banner_block"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu_banner_block"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_8"
            android:layout_marginEnd="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_8"
            android:background="@drawable/server_selection_bg"
            android:elevation="2dp"
            android:padding="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nav_header">

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/menu_banner_container_admob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/admob_banner_id"
                ads:layout_constraintBottom_toBottomOf="parent"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toTopOf="parent" />

            <com.facebook.ads.NativeAdLayout
                android:id="@+id/menu_banner_container_facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/size_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_banner_block">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/drawer_share_item"
                    style="@style/drawer_card"
                    android:elevation="2dp"
                    app:layout_constraintBottom_toTopOf="@+id/drawer_rate_item"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/drawer_premium_item">

                    <ImageView
                        android:id="@+id/drawer_item3_icon"
                        style="@style/drawerMainIcon"
                        android:src="@drawable/share"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/drawer_share_text"
                        android:textColor="@color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/drawer_item3_icon"
                        app:layout_constraintStart_toEndOf="@+id/drawer_item3_icon"
                        app:layout_constraintTop_toTopOf="@+id/drawer_item3_icon" />

                    <ImageView
                        style="@style/drawerExpandIcon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/drawer_rate_item"
                    style="@style/drawer_card"
                    android:elevation="2dp"
                    app:layout_constraintBottom_toTopOf="@+id/drawer_about_item"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/drawer_share_item">

                    <ImageView
                        android:id="@+id/drawer_item4_icon"
                        style="@style/drawerMainIcon"
                        android:src="@drawable/rate"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/drawer_rate_text"
                        android:textColor="@color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/drawer_item4_icon"
                        app:layout_constraintStart_toEndOf="@+id/drawer_item4_icon"
                        app:layout_constraintTop_toTopOf="@+id/drawer_item4_icon" />

                    <ImageView
                        style="@style/drawerExpandIcon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/drawer_about_item"
                    style="@style/drawer_card"
                    android:elevation="2dp"
                    app:layout_constraintBottom_toTopOf="@+id/drawer_privacy_item"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/drawer_rate_item">

                    <ImageView
                        android:id="@+id/drawer_item5_icon"
                        style="@style/drawerMainIcon"
                        android:src="@drawable/info"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/drawer_about_text"
                        android:textColor="@color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/drawer_item5_icon"
                        app:layout_constraintStart_toEndOf="@+id/drawer_item5_icon"
                        app:layout_constraintTop_toTopOf="@+id/drawer_item5_icon" />

                    <ImageView
                        style="@style/drawerExpandIcon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/drawer_privacy_item"
                    style="@style/drawer_card"
                    android:elevation="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/drawer_about_item">

                    <ImageView
                        android:id="@+id/drawer_item6_icon"
                        style="@style/drawerMainIcon"
                        android:src="@drawable/privacy"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/drawer_policy_text"
                        android:textColor="@color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/drawer_item6_icon"
                        app:layout_constraintStart_toEndOf="@+id/drawer_item6_icon"
                        app:layout_constraintTop_toTopOf="@+id/drawer_item6_icon" />

                    <ImageView
                        style="@style/drawerExpandIcon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>